@@ -12,8 +12,23 @@ class ProductLocation(sequence_ordered(), ModelSQL, ModelView, MatchMixin):
     It defines the default storage location by warehouse for a product.
     '''
     __name__ = 'stock.product.location'
-    product = fields.Many2One('product.product', 'Product', required=True,
-        select=True, ondelete='CASCADE')
+    template = fields.Many2One(
+        'product.template', "Product",
+        required=True, ondelete='CASCADE', select=True,
+        domain=[
+            If(Bool(Eval('product')),
+                ('products', '=', Eval('product')),
+                ()),
+            ],
+        depends=['product'])
+    product = fields.Many2One(
+        'product.product', "Variant", ondelete='CASCADE', select=True,
+        domain=[
+            If(Bool(Eval('template')),
+                ('template', '=', Eval('template')),
+                ()),
+            ],
+        depends=['template'])
     warehouse = fields.Many2One('stock.location', 'Warehouse', required=True,
         domain=[('type', '=', 'warehouse')], ondelete='CASCADE')
     location = fields.Many2One('stock.location', 'Storage Location',
@@ -24,6 +39,20 @@ class ProductLocation(sequence_ordered(), ModelSQL, ModelView, MatchMixin):
                     [Eval('warehouse')], [])),
             ], depends=['warehouse'])
 
+    @classmethod
+    def __register__(cls, module_name):
+        table = cls.__table_handler__(module_name)
+
+        super().__register__(module_name)
+
+        # Migration from 5.6: Add template on locations
+        table.not_null_action('product', 'remove')
+
+    @fields.depends('product', '_parent_product.template')
+    def on_change_product(self):
+        if self.product:
+            self.template = self.product.template
+
 
 class Move(metaclass=PoolMeta):
     __name__ = 'stock.move'
@@ -33,7 +62,12 @@ class Move(metaclass=PoolMeta):
         if getattr(self, 'shipment', None):
             pattern.setdefault('warehouse', self.shipment.warehouse.id)
 
-        for product_location in self.product.locations:
+        if self.product:
+            pattern.setdefault('template', self.product.template.id)
+            pattern.setdefault('product', self.product.id)
+
+        locations = self.product.locations + self.product.template.locations
+        for product_location in locations:
             if product_location.match(pattern):
                 setattr(self, field, product_location.location)
                 break
