@@ -2,6 +2,9 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form cursor="product">
+    <label name="template"/>
+    <field name="template"/>
+    <newline/>
     <label name="sequence"/>
     <field name="sequence"/>
     <label name="product"/>
