@@ -2,6 +2,7 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree>
+    <field name="template" expand="2"/>
     <field name="product" expand="2"/>
     <field name="warehouse" expand="1"/>
     <field name="location" expand="1"/>
